--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         .button-container a img {
             width: 300px;
-            height: 300px;
+            height: 503px;
             object-fit: contain;
             border-radius: 12px;
             transition: transform 0.3s, box-shadow 0.3s;
@@ -45,22 +45,22 @@
     <h1>RC Beam Analysis and Design Calculator</h1>
 
     <div class="button-container">
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBanalysis.png" alt="Button 1">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/Tbeamanalysis.png" alt="Button 2">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBanalysisbutton.png" alt="Button 3">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBdesignbutton.png" alt="Button 4">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/Tbeamdesignbutton.png" alt="Button 5">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/" target="_blank">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBdesignbutton.png" alt="Button 6">
         </a>
     </div>
