--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 150px;
             height: 251.3px;
             object-fit: contain;
-            border-radius: 12px;
+            border-radius: 0;
             transition: transform 0.3s, box-shadow 0.3s;
         }
         .button-container a img:hover {
