--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RC Beam Analysis and Design Calculator</title>
+    <title>RC Analysis and Design Calculator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <h1>RC Beam Analysis and Design Calculator</h1>
+    <h1>Reinforced Concrete Analysis and Design Calculator</h1>
 
     <div class="button-container">
         <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/" target="_blank">
