--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 5px 15px;
+            padding: 3px 15px;
+        }
+        .header-content h1 {
+            margin: 6px 0; 
+            font-size: 20px; 
         }
         .image-button {
             display: inline-block;
