--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 3px 15px;
-        }
-        .header-content h1 {
-            margin: 6px 0; 
-            font-size: 20px; 
+            padding: 5px 15px;
         }
         .image-button {
             display: inline-block;
@@ -97,6 +93,9 @@
         <div class="header-content">
             <div>
               <h1>REINFORCED CONCRETE CALCULATOR</h1>
+          </div>
+            <a href="https://obracewell.github.io/RCBeamCalculator/" class="image-button">
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/homebutton.png" alt="Button Icon" class="button-image"></a>
           </div>
     </header>
     
