--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             background-color: #f9f9f9;
             margin-bottom: 20px;
         }
-        h2 {
+        h1 {
             margin-bottom: 40px;
         }
 
@@ -99,7 +99,7 @@
           </div>
     </header>
     
-    <h2>Reinforced Concrete Analysis and Design Calculators</h2>
+    <h1>RC Analysis and Design Calculators</h1>
 
    <!-- Top Centered Button -->
     <div class="table-button">
