--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
             background-color: #f9f9f9;
             margin-bottom: 20px;
         }
-        h1 {
-            margin-bottom: 40px;
-        }
-
         .table-button a img {
             width: 208px;
             height: 52px;
+            margin-top: 40px;
             margin-bottom: 30px;
             transition: transform 0.3s, box-shadow 0.3s;
         }
