--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
     
     <!-- Main Button Grid --> 
     <div class="button-container">
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-SRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBanalysis.png" alt="Button 1">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-TBeam/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/Tbeamanalysis.png" alt="Button 2">
         </a>
-        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBanalysisbutton.png" alt="Button 3">
         </a>
-        <a href="https://obracewell.github.io/RCBeamDesignCalculator-SRB/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-SRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBdesignbutton.png" alt="Button 4">
         </a>
-        <a href="https://obracewell.github.io/RCBeamDesignCalculator-TBeam/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-TBeam/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/Tbeamdesignbutton.png" alt="Button 5">
         </a>
-        <a href="https://obracewell.github.io/RCBeamDesignCalculator-DRB/" target="_blank">
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-DRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBdesignbutton.png" alt="Button 6">
         </a>
     </div>
