--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </header>
     
     <h1>RC Analysis and Design Calculators</h1>
+    <p>Insert some text about the website and its intended use.</p>
 
    <!-- Top Centered Button -->
     <div class="table-button">
