--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
     
     <h1>RC Analysis and Design Calculators</h1>
     
-    <div style="max-width: 800px; margin: 0 auto;">
+    <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
         This website features six interactive calculators designed to support reinforced concrete (RC) beam design and analysis. 
         It includes both analysis and design calculators for three common RC beam types: singly reinforced beams (SRB), T-beams, 
         and doubly reinforced beams (DRB). Additionally, tables that would be helpful are provided. 
     </p>
     </div>
-    <div style="max-width: 800px; margin: 0 auto;">
+    <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
         For the analysis calculators, users can input design parameters and instantly visualize how those values affect beam strength. 
         The goal is to provide an intuitive way to understand structural behavior and the impact of design decisions in real time.
     </p>
     </div>
-    <div style="max-width: 800px; margin: 0 auto;">
+    <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
         For the design calculators, users can input the known design parameters and design the reinforcing steel for their beam. 
         The goal is to show that multiple options will produce the desired strength, and the next step would be working towards optimization.
