--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         }
         .button-container a img {
             width: 150px;
-            height: 251.3px;
+            height: 250px;
             object-fit: contain;
             border-radius: 0;
             transition: transform 0.3s, box-shadow 0.3s;
@@ -77,11 +77,6 @@
         .button-container a img:hover {
             transform: scale(1.05);
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-        @media(max-width: 600px) {
-            .button-container {
-                grid-template-columns: repeat(2, 1fr);
-            }
         }
     </style>
 </head>
@@ -136,6 +131,15 @@
         </a>
         <a href="https://obracewell.github.io/RCBeamAnalysisCalculator-DRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBanalysisbutton.png" alt="Button 3">
+        </a>
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-SRB/">
+            <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBdesignbutton.png" alt="Button 4">
+        </a>
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-TBeam/">
+            <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/Tbeamdesignbutton2.png" alt="Button 5">
+        </a>
+        <a href="https://obracewell.github.io/RCBeamDesignCalculator-DRB/">
+            <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/DRBdesignbutton.png" alt="Button 6">
         </a>
         <a href="https://obracewell.github.io/RCBeamDesignCalculator-SRB/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/SRBdesignbutton.png" alt="Button 4">
