--- a/index.html
+++ b/index.html
@@ -84,14 +84,19 @@
             max-width: 800px;
             margin: 30px auto 0 auto;
         }
-
+        .large-button-row a {
+            display: block;
+            margin: 0;
+            padding: 0;
+        }
         .large-button-row a img {
             width: 270px;
             height: 175px;
             object-fit: contain;
+            margin: 0;
+            padding: 0;
             transition: transform 0.3s, box-shadow 0.3s;
         }
-
         .large-button-row a img:hover {
             transform: scale(1.05);
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
@@ -161,7 +166,7 @@
         </a>
     </div>
 
-    //Column button grid
+    <Column Button Grid>
     <div class="large-button-row">
         <a href="https://obracewell.github.io/RCColumnDesignCalculator-Square/">
             <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/squareCbutwide.png" alt="Square Column Button">
