--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
         }
         .large-button-wrapper {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
+            gap: 220px;
             max-width: 800px;
             margin: 20px auto 0 auto;
-            padding: 0 10px;
         }
         .large-button-wrapper a img {
-             width: 270px;
-            height: 175px;
+             width: 290px;
+            height: 165px;
             object-fit: contain;
-        transition: transform 0.3s, box-shadow 0.3s;
+            transition: transform 0.3s, box-shadow 0.3s;
         }
         .large-button-wrapper a img:hover {
             transform: scale(1.05);
