--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
             <div>
               <h1>REINFORCED CONCRETE CALCULATOR</h1>
           </div>
+            <a href="https://obracewell.github.io/RCBeamCalculator-Tables/" class="image-button" title="Info Page">
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/infobutton.png" alt="Info Button Icon" class="button-image"></a>
             <a href="https://obracewell.github.io/RCBeamCalculator/" class="image-button">
-                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/homebutton.png" alt="Button Icon" class="button-image"></a>
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/homebutton.png" alt="Home Button Icon" class="button-image"></a>
           </div>
     </header>
     
@@ -112,21 +114,18 @@
     
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
-        This website features six interactive calculators designed to support reinforced concrete (RC) beam design and analysis. 
-        It includes both analysis and design calculators for three common RC beam types: singly reinforced beams (SRB), T-beams, 
-        and doubly reinforced beams (DRB). Additionally, tables that would be helpful are provided. 
+        <strong>Welcome to the Reinforced Concrete Calculator Toolbox.</strong>
     </p>
     </div>
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
-        For the analysis calculators, users can input design parameters and instantly visualize how those values affect beam strength. 
-        The goal is to provide an intuitive way to understand structural behavior and the impact of design decisions in real time.
+        This website provides interactive calculators for the design and analysis of RC beams and columns.
+        Tools are available for singly reinforced beams (SRB), doubly reinforced beams (DRB), T-beams, and square and circular columns.
     </p>
     </div>
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
-        For the design calculators, users can input the known design parameters and design the reinforcing steel for their beam. 
-        The goal is to show that multiple options will produce the desired strength, and the next step would be working towards optimization.
+        Start designing or analyzing a member below, or visit the Info page to learn more.
     </p>
     </div>
 
