--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             vertical-align: middle;
             border-radius: 8px;
         }
+        .button-group {
+            display: flex;
+            gap: 70px; 
+        }
         .image-button:hover {
             background-color: #e0e0e0;
         }
@@ -103,11 +107,17 @@
             <div>
               <h1>REINFORCED CONCRETE CALCULATOR</h1>
           </div>
-            <a href="https://obracewell.github.io/RCBeamCalculator-Tables/" class="image-button" title="Info Page">
-                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/infobutton.png" alt="Info Button Icon" class="button-image"></a>
-            <a href="https://obracewell.github.io/RCBeamCalculator/" class="image-button">
-                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/homebutton.png" alt="Home Button Icon" class="button-image"></a>
-          </div>
+          <div class="button-group">
+            <a href="https://obracewell.github.io/RCBeamCalculator-Info/" class="image-button" title="Info Page">
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/infobuttonn.png" 
+                     alt="Info Button Icon" class="button-image">
+            </a>
+            <a href="https://obracewell.github.io/RCBeamCalculator/" class="image-button" title="Home">
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/homebutton.png" 
+                     alt="Home Button Icon" class="button-image">
+            </a>
+            </div> 
+        </div>
     </header>
     
     <h1>RC Analysis and Design Calculators</h1>
