--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="button-group">
             <a href="https://obracewell.github.io/RCBeamCalculator-Info/" class="image-button" title="Info Page">
-                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/imagebuttonn.png" 
+                <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/infobuttonn.png" 
                      alt="Info Button Icon" class="button-image">
             </a>
             <a href="https://obracewell.github.io/RCBeamCalculator/" class="image-button" title="Home">
@@ -124,7 +124,7 @@
     
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
     <p>
-        <strong>Welcome to the Reinforced Concrete Calculator Toolbox.</strong>
+        <strong>Welcome to the Reinforced Concrete Calculator Toolbox</strong>
     </p>
     </div>
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
