--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <h1>REINFORCED CONCRETE CALCULATOR</h1>
           </div>
           <div class="button-group">
-            <a href="https://obracewell.github.io/RCBeamCalculator-Info/" class="image-button" title="Info Page">
+            <a href="https://obracewell.github.io/RCCcalculator-Info/" class="image-button" title="Info Page">
                 <img src="https://raw.githubusercontent.com/obracewell/RCBeamCalculator/refs/heads/main/assets/infobuttonn.png" 
                      alt="Info Button Icon" class="button-image">
             </a>
