--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RC Analysis and Design Calculator</title>
+    <title>RC Calculators</title>
     <style>
         .site-header {
             background-color: #003366;
